--- a/leaderboard.html
+++ b/leaderboard.html
@@ -50,7 +50,8 @@
         apiKey: "AIzaSyACd811OgTStf3Ks4scWZz6SwSslvV5nc8",
         authDomain: "riemanncounter.firebaseapp.com",
         projectId: "riemanncounter",
-        databaseURL: "https://riemanncounter-default-rtdb.firebaseio.com",
+        databaseURL:
+          "https://riemanncounter-default-rtdb.asia-southeast1.firebasedatabase.app",
         storageBucket: "riemanncounter.firebasestorage.app",
         messagingSenderId: "724280141787",
         appId: "1:724280141787:web:230c432b8d51620806a9fe",
